--- a/index.html
+++ b/index.html
@@ -5,3 +5,8 @@
         <script src="script.js"defer></script>
         <title>Steakhouse</title>
     </head>
+
+    <body>
+        <div> </div>
+    </body>
+</html>
