--- a/contactus.html
+++ b/contactus.html
@@ -3,7 +3,7 @@
     <head>
         <link type="text/css" rel="stylesheet" media="all" href="style.css" />
         <script src="script.js"defer></script>
-        <title>Steakhouse</title>
+        <title>Contact Us</title>
     </head>
 
     <body>
