--- a/contactus.html
+++ b/contactus.html
@@ -7,6 +7,16 @@
     </head>
 
     <body>
-        <div> </div>
+        <h1>Help Us Reach You</h1>
+        <div>Your Name:</div>
+        <input type="text"></input>
+        <div>Email Address:</div>
+        <input type="text"></input>
+        <div>Phone Number (Optional):</div>
+        <input type="text"></input>
+        <div>Comment:</div>
+        <input type="text"></input>
+        <input type="submit"></input>
+
     </body>
 </html>
