--- a/contactus.html
+++ b/contactus.html
@@ -1,22 +1,34 @@
 <!DOCTYPE html>
 <html lang="en-US">
     <head>
-        <link type="text/css" rel="stylesheet" media="all" href="style.css" />
+        <link type="text/css" rel="stylesheet" media="all" href="styleContactUs.css" />
         <script src="script.js"defer></script>
         <title>Contact Us</title>
     </head>
 
     <body>
         <h1>Help Us Reach You</h1>
-        <div>Your Name:</div>
-        <input type="text"></input>
-        <div>Email Address:</div>
-        <input type="text"></input>
-        <div>Phone Number (Optional):</div>
-        <input type="text"></input>
-        <div>Comment:</div>
-        <input type="text"></input>
-        <input type="submit"></input>
+        <form>
+            <div>
+                <p>Your Name:</p>
+                <input type="text" required></input>
 
+                <p>Email Address:</p>
+                <input type="email" required></input>
+
+                <p>Phone Number:</p>
+                <input type="tel" required></input>
+
+                <p>Comment:</p>
+                <textarea rows="4" cols="50" required></textarea>
+
+                <br></br>
+                <button type="submit">Submit</button>
+            </div>
+        </form>
+
+        <div>
+            <p id="reach">Any questions or concerns, please reach out to our team at 1-800-555-5555 or email rfsteakhouse@gmail.com</p>
+        </div>
     </body>
 </html>
