--- a/reservation-Page.html
+++ b/reservation-Page.html
@@ -5,18 +5,30 @@
 
 <!DOCTYPE html>
 <html lan="'en-US">
-
     <!-- Link to CSS -->
     <head>
         <link href = "style-ReservationPage.css" rel="stylesheet" />
         <title>Reservation</title>
     </head>
-
-    <!-- Google Form -->
     <body>
+        <!-- Header -->
+        <header>
+            <nav class="navbar">
+            <div class="logo">
+                Red Fox Steakhouse
+                <img src="images/SHLogo.webp" alt="Redfox Logo" class="logo-img">
+            </div>
+              <ul class="nav-links">
+                <li><a href="dinnermenu.html">Menus</a></li>
+                <li><a href="about-us.html">About Us</a></li>
+                <li><a href="contactus.html">Contact</a></li>
+                <li><a href="reservation-Page.html">Reservations</a></li>
+              </ul>
+            </nav>
+        </header>
+        <!-- Google Form -->
         <div class="googleform">
             <iframe src="https://docs.google.com/forms/d/e/1FAIpQLScAaoZ6qJp9BvMayBw4uIp6PGYsRugZRWhZkEQxzgGtDOG_OA/viewform?embedded=true" width="800" height="600" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
         </div>
-        
     </body>
 </html>
