--- a/landingPage.html
+++ b/landingPage.html
@@ -13,12 +13,12 @@
         Redfox Steakhouse
         <img src="images/SHLogo.webp" alt="Redfox Logo" class="logo-img">
     </div>
-      <ul class="nav-links">
-        <li><a href="#menu">Menus</a></li>
-        <li><a href="#about">About Us</a></li>
-        <li><a href="#contact">Contact</a></li>
-        <li><a href="#reservations">Reservations</a></li>
-      </ul>
+    <ul class="nav-links">
+      <li><a href="dinnermenu.html">Menus</a></li>
+      <li><a href="about-us.html">About Us</a></li>
+      <li><a href="contactus.html">Contact</a></li>
+      <li><a href="reservation-Page.html">Reservations</a></li>
+    </ul>
     </nav>
   </header>
 
@@ -50,15 +50,13 @@
       <h2>Reservations</h2>
       
       <h3>Hours</h3>
-    <ul> 
-      <li>Friday-Saturday: 4PM - 12PM</li>
-      <li>Sunday-Thursday: 4PM - 10PM</li>
-    </ul>
+
+      <p>Friday-Saturday: 4PM - 12PM</p>
+      <p>Sunday-Thursday: 4PM - 10PM</p>
+    
     <p>Book today for the best cuts in Poughkeepsie.</p>
   </section>
 
-  <footer class="footer">
-    <p>&copy; 2024 Redfox Steakhouse. All rights reserved.</p>
-  </footer>
+ 
 </body>
 </html>
