--- a/contactus.html
+++ b/contactus.html
@@ -7,6 +7,21 @@
     </head>
 
     <body>
+        <header>
+            <nav class="navbar">
+            <div class="logo">
+                Redfox Steakhouse
+                <img src="images/SHLogo.webp" alt="Redfox Logo" class="logo-img">
+            </div>
+            <ul class="nav-links">
+              <li><a href="dinnermenu.html">Menus</a></li>
+              <li><a href="about-us.html">About Us</a></li>
+              <li><a href="contactus.html">Contact</a></li>
+              <li><a href="reservation-Page.html">Reservations</a></li>
+            </ul>
+            </nav>
+        </header>
+
         <h1>Help Us Reach You</h1>
         <form>
             <div>
