--- a/reservation-Page.html
+++ b/reservation-Page.html
@@ -15,7 +15,7 @@
         <header>
             <nav class="navbar">
             <div class="logo">
-                Red Fox Steakhouse
+                Redfox Steakhouse
                 <img src="images/SHLogo.webp" alt="Redfox Logo" class="logo-img">
             </div>
               <ul class="nav-links">
