Header Update + Clickable Now
Made Sam's Header Match Mine and Peter's, since it was a little bit off and made his header logo + text clickable and take you to landing page

--- a/contactus.html
+++ b/contactus.html
@@ -9,16 +9,19 @@
     <body>
         <header>
             <nav class="navbar">
-            <div class="logo">
-                Redfox Steakhouse
-                <img src="images/SHLogo.webp" alt="Redfox Logo" class="logo-img">
-            </div>
-            <ul class="nav-links">
-              <li><a href="dinnermenu.html">Menus</a></li>
-              <li><a href="about-us.html">About Us</a></li>
-              <li><a href="contactus.html">Contact</a></li>
-              <li><a href="reservation-Page.html">Reservations</a></li>
-            </ul>
+                <!-- Name + Logo Clickable on to Get to Landing page -->
+                <a href="landingPage.html" style="color: inherit; text-decoration: none;">
+                    <div class="logo">
+                        Redfox Steakhouse
+                        <img src="images/SHLogo.webp" alt="Redfox Logo" class="logo-img">
+                    </div>
+                </a>
+                <ul class="nav-links">
+                    <li><a href="dinnermenu.html">Menus</a></li>
+                    <li><a href="about-us.html">About Us</a></li>
+                    <li><a href="contactus.html">Contact</a></li>
+                    <li><a href="reservation-Page.html">Reservations</a></li>
+                </ul>
             </nav>
         </header>
 
