--- a/about-us.html
+++ b/about-us.html
@@ -32,7 +32,7 @@
                 Hover_hidden displayed on the side and visble on devices that do not support hover functionality -->
             <div class= "hover_parent" id="Begin">
                 <h2 class>Beginnings</h2>
-                <img src="AU_begin_cow.png" class="img_sizing">
+                <img src="images/AU_begin_cow.png" class="img_sizing">
                 <div class='hover_hidden'>
                     <p>In 1892, brothers John and Amos Redfox invested the money their dead parents made selling cholera to the uninitiated into something they both had a passion 
                         for: steak. After decimating the local cow population, they pacified the angry locals by serving delicacies these dumb stupid idiot yeomen farmers had never
@@ -43,7 +43,7 @@
                 
             <div class= "hover_parent" id="Growth">
                 <h2>Growth</h2>
-                <img src="AU_growth_food.png" class="img_sizing">
+                <img src="images/AU_growth_food.png" class="img_sizing">
                 <div class='hover_hidden'>
                     <p>Surviving the Great Depression by briefly substituting cow meat with car tires, Redfox benefitted from the wartime economic boom by selling their "meat" to 
                         the military, which has been quoted as being responsible for half of all casualties of the United States Armed Forces during the war. The post war period 
@@ -54,7 +54,7 @@
 
             <div class= "hover_parent" id="Decline"> 
                 <h2>Decline</h2>
-                <img src="AU_decline_tire.png" class="img_sizing">
+                <img src="images/AU_decline_tire.png" class="img_sizing">
                 <div class='hover_hidden'>
                     <p>Like a Boeing 747 MAX, Redfox Steakhouse's profits took a plunge caused by the meddling of a little known governmental agency called the FDA, who didn't 
                         appreciate the finer mechanisms of the work we had done. Namely, it was the fact that we had never stopped using car tires that had done us in, and we were 
@@ -66,7 +66,7 @@
 
             <div class= "hover_parent" id="Today"> 
                 <h2>Today</h2>
-                <img src=AU_today_flag.png class="img_sizing">
+                <img src="images/AU_today_flag.png" class="img_sizing">
                 <div class='hover_hidden'>
                     <p>Today, we have only the one humble location, serving the same humble meals perfected by brothers Redfox 132 years ago, now having the maximum amount of tire 
                         we can include as regulated by the FDA. You selfish monsters have destroyed a beautiful legacy of fine dining and incredible taste, letting the FDA ravage us 
