--- a/landingPage.html
+++ b/landingPage.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!DOCTYPE html> <!--Peter Kagiwada - Landing Page -->
 <html lang="en">
 <head>
   <meta charset="UTF-8">
@@ -6,31 +6,34 @@
   <title>Redfox Steakhouse</title>
   <link rel="stylesheet" href="stylesLandingPage.css">
 </head>
-<body>
+<body> 
   <header>
-    <nav class="navbar">
-    <div class="logo">
-        Redfox Steakhouse
-        <img src="images/SHLogo.webp" alt="Redfox Logo" class="logo-img">
-    </div>
-    <ul class="nav-links">
-      <li><a href="dinnermenu.html">Menus</a></li>
-      <li><a href="about-us.html">About Us</a></li>
-      <li><a href="contactus.html">Contact</a></li>
-      <li><a href="reservation-Page.html">Reservations</a></li>
-    </ul>
+    <nav class="navbar"> <!--navigation bar, copy css classes also: navbar and logo -->
+        <!-- Name + Logo Clickable on to Get to Landing page -->
+        <a href="landingPage.html" style="color: inherit; text-decoration: none;">
+          <div class="logo">
+              Redfox Steakhouse
+              <img src="images/SHLogo.webp" alt="Redfox Logo" class="logo-img">
+          </div>
+      </a>
+      <ul class="nav-links">
+          <li><a href="dinnermenu.html">Menus</a></li>
+          <li><a href="about-us.html">About Us</a></li>
+          <li><a href="contactus.html">Contact</a></li>
+          <li><a href="reservation-Page.html">Reservations</a></li>
+      </ul>
     </nav>
   </header>
 
-  <section id="hero" class="hero">
+  <section id="hero" class="hero"> <!--main landing page -->
     <div class="hero-content">
       <h1>Welcome to the Redfox Steakhouse</h1>
       <p>Savor the best steaks in PoTown!</p>
-      <a href="#reservations" class="btn">Reserve Your Table</a>
+      <a href="reservation-Page.html" class="btn">Reserve Your Table</a>
     </div>
   </section>
 
-  <section id="menu" class="section">
+  <section id="menu" class="section"> <!-- general descriptions -->
     <h2>Our Menus</h2>
     <p>Explore our lunch and dinner menus affordable to all locals and college students.</p>
   </section>
