--- a/landingPage.html
+++ b/landingPage.html
@@ -28,7 +28,7 @@
   <section id="hero" class="hero"> <!--main landing page -->
     <div class="hero-content">
       <h1>Welcome to the Redfox Steakhouse</h1>
-      <p>Savor the best steaks in PoTown!</p>
+      <p>The foxiest steak in the Hudson!</p>
       <a href="reservation-Page.html" class="btn">Reserve Your Table</a>
     </div>
   </section>
