--- a/reservation-Page.html
+++ b/reservation-Page.html
@@ -29,7 +29,7 @@
                 </ul>
             </nav>
         </header>
-        <!-- Current Reservations -->
+        <!-- Current Reservations: allows for the responses in the google forms, which are linked to a google spreadsheet to take the Date/Time of reservations and send it to another sheet, which then gets displayed on the reservation page (with some delay). -->
         <div class="reservation-page">
             <iframe src="https://docs.google.com/spreadsheets/d/e/2PACX-1vQLZymytQrqbm1kQuwssw8PkuJCsS_y2MBiOkiniGXs7sdqAiSHZvRU0-rx_cEPQg9oHbSlWAWjEXQH/pubhtml?gid=0&amp;single=true&amp;widget=true&amp;headers=false" width="450" height="300"></iframe>
         </div>
