--- a/landingPage.html
+++ b/landingPage.html
@@ -1,29 +1,27 @@
 <!DOCTYPE html> <!--Peter Kagiwada - Landing Page -->
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Redfox Steakhouse</title>
   <link rel="stylesheet" href="stylesLandingPage.css">
 </head>
 <body> 
   <header>
-    <nav class="navbar"> <!--navigation bar, copy css classes also: navbar and logo -->
+    <nav class="navbar">
         <!-- Name + Logo Clickable on to Get to Landing page -->
         <a href="landingPage.html" style="color: inherit; text-decoration: none;">
-          <div class="logo">
-              Redfox Steakhouse
-              <img src="images/SHLogo.webp" alt="Redfox Logo" class="logo-img">
-          </div>
-      </a>
-      <ul class="nav-links">
-          <li><a href="dinnermenu.html">Menus</a></li>
-          <li><a href="about-us.html">About Us</a></li>
-          <li><a href="contactus.html">Contact</a></li>
-          <li><a href="reservation-Page.html">Reservations</a></li>
-      </ul>
+            <div class="logo">
+                Redfox Steakhouse
+                <img src="images/SHLogo.webp" alt="Redfox Logo" class="logo-img">
+            </div>
+        </a>
+        <ul class="nav-links">
+            <li><a href="dinnermenu.html">Menus</a></li>
+            <li><a href="about-us.html">About Us</a></li>
+            <li><a href="contactus.html">Contact</a></li>
+            <li><a href="reservation-Page.html">Reservations</a></li>
+        </ul>
     </nav>
-  </header>
+</header>
 
   <section id="hero" class="hero"> <!--main landing page -->
     <div class="hero-content">
