--- a/contactus.html
+++ b/contactus.html
@@ -9,7 +9,7 @@
         <header>
             <nav class="navbar">
                 <!-- Name + Logo Clickable on to Get to Landing page -->
-                <a href="landingPage.html" style="color: inherit; text-decoration: none;">
+                <a href="index.html" style="color: inherit; text-decoration: none;">
                     <div class="logo">
                         Redfox Steakhouse
                         <img src="images/SHLogo.webp" alt="Redfox Logo" class="logo-img">
