--- a/reservation-Page.html
+++ b/reservation-Page.html
@@ -4,7 +4,7 @@
 -->
 
 <!DOCTYPE html>
-<html lan="'en-US">
+<html lang="en-US">
     <!-- Link to CSS -->
     <head>
         <link href = "style-ReservationPage.css" rel="stylesheet" />
