Added Alt-Text to the images for accessibility

--- a/about-us.html
+++ b/about-us.html
@@ -2,7 +2,6 @@
 <html lang="en-US">
     <head>
         <link type="text/css" rel="stylesheet" media="all" href="style-aboutUs.css" />
-        <script src="script.js"defer></script>
         <title>Steakhouse - About Us</title>
     </head>
     
@@ -10,7 +9,7 @@
          <!-- Header -->
          <header>
             <nav class="navbar">
-                <!-- Name + Logo Clickable on to Get to Landing page -->
+                <!-- Name + Logo Clickable on to get to the Landing page -->
                 <a href="index.html" style="color: inherit; text-decoration: none;">
                     <div class="logo">
                         Redfox Steakhouse
@@ -32,7 +31,7 @@
                 Hover_hidden displayed on the side and visble on devices that do not support hover functionality -->
             <div class= "hover_parent" id="Begin">
                 <h2 class>Beginnings</h2>
-                <img src="images/AU_begin_cow.png" class="img_sizing">
+                <img src="images/AU_begin_cow.png" alt="John Redfox Standing Next to his Stolen Prized Cow" class="img_sizing">
                 <div class='hover_hidden'>
                     <p>In 1892, brothers John and Amos Redfox invested the money their dead parents made selling cholera to the uninitiated into something they both had a passion 
                         for: steak. After decimating the local cow population, they pacified the angry locals by serving delicacies these dumb stupid idiot yeomen farmers had never
@@ -43,18 +42,18 @@
                 
             <div class= "hover_parent" id="Growth">
                 <h2>Growth</h2>
-                <img src="images/AU_growth_food.png" class="img_sizing">
+                <img src="images/AU_growth_food.png" alt="Soldier in WW2 Eating a Redfox Steakhouse Tire Burger" class="img_sizing">
                 <div class='hover_hidden'>
-                    <p>Surviving the Great Depression by briefly substituting cow meat with car tires, Redfox benefitted from the wartime economic boom by selling their "meat" to 
+                    <p>Surviving the Great Depression by briefly substituting cow meat with car tires, Redfox benefited from the wartime economic boom by selling their "meat" to 
                         the military, which has been quoted as being responsible for half of all casualties of the United States Armed Forces during the war. The post war period 
-                        saw a return to using actual meat thanks to increased profits caused by housewives high on valium ordering the entire menu. The 50s were a time of growth 
+                        saw a return to using actual meat thanks to increased profits caused by housewives high on Valium ordering the entire menu. The 50s were a time of growth 
                         as Redfox expanded it's scope to at it's peak 481 locations all across Dutchess County. With so much success, how could the line not keep on going up?</p>
                 </div>
             </div>
 
             <div class= "hover_parent" id="Decline"> 
                 <h2>Decline</h2>
-                <img src="images/AU_decline_tire.png" class="img_sizing">
+                <img src="images/AU_decline_tire.png" alt="The Modern Tire Burger the FDA Didn't Take to Kindly To" class="img_sizing">
                 <div class='hover_hidden'>
                     <p>Like a Boeing 747 MAX, Redfox Steakhouse's profits took a plunge caused by the meddling of a little known governmental agency called the FDA, who didn't 
                         appreciate the finer mechanisms of the work we had done. Namely, it was the fact that we had never stopped using car tires that had done us in, and we were 
@@ -66,13 +65,13 @@
 
             <div class= "hover_parent" id="Today"> 
                 <h2>Today</h2>
-                <img src="images/AU_today_flag.png" class="img_sizing">
+                <img src="images/AU_today_flag.png" alt="The Theoretical Raising of the Redfox Steakhouse Flag Over the FDA Headquarters" class="img_sizing">
                 <div class='hover_hidden'>
                     <p>Today, we have only the one humble location, serving the same humble meals perfected by brothers Redfox 132 years ago, now having the maximum amount of tire 
                         we can include as regulated by the FDA. You selfish monsters have destroyed a beautiful legacy of fine dining and incredible taste, letting the FDA ravage us 
                         as you stood idly by, and all for what? It's a fact that 75% of all foods contain some sort of tire, do you really think that the FDA 
                         came down us with their "Hammer of Justice" because they were worried for the common good of the people? We have been persecuted, and those injustices cannot be forgiven. 
-                        As long as blood still flows through our veins, us at Redfox Steakhouses will fight with any means neccessary to put our award winning resturaunt back in its rightplace place.
+                        As long as blood still flows through our veins, us at Redfox Steakhouses will fight with any means necessary to put our award winning restaurant back in its rightful place.
                         Anybody interested in joining our crusade against the FDA or donating to the GoFundMe to bail out John Redfox Junior on his vehicular manslaughter charge, give us a call or send
                         us a message through our contact page</p>
                 </div>
