Updated landing page text over hero image for accessibility

--- a/index.html
+++ b/index.html
@@ -26,7 +26,9 @@
   <section id="hero" class="hero"> <!--main landing page -->
     <div class="hero-content">
       <h1>Welcome to the Redfox Steakhouse</h1>
-      <p>The foxiest steak in the Hudson!</p>
+      <p style="font-weight:bold;" id="tagLine">The foxiest steak in the Hudson!</p>
+      <br>
+      <br>
       <a href="reservation-Page.html" class="btn">Reserve Your Table</a>
     </div>
   </section>
